<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10e_robotiq_cell</name>
  <version>1.0.0</version>
  <description>Combined URDF description for UR10e robot with Robotiq 2F-85 gripper</description>
  <maintainer email="bagrant2019@gmail.com">hippi1o2</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
